@@ -1,5 +1,6 @@
 2.0.0a27
  - feat: add developer mode
+ - feat: display images on hover in polygon window in QuickView
  - fix: hide confusing "Advances Export" plot menu in developer mode
  - fix: only show scalar features in QuickView feature selection
  - fix: QuickView -> Event -> Features labels in table were drawn
